--- a/Minggu2/app/src/main/AndroidManifest.xml
+++ b/Minggu2/app/src/main/AndroidManifest.xml
@@ -17,6 +17,18 @@
             android:name=".TabelLayout"
             android:exported="false" />
         <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Material"
+            android:exported="false" />
+        <activity
+            android:name=".ScrollView"
+            android:exported="false" />
+        <activity
+            android:name=".ScrollViewHorizontal"
+            android:exported="false" />
+        <activity
             android:name=".FrameLayout"
             android:exported="false" />
         <activity
@@ -29,7 +41,7 @@
             android:name=".LinearLayout"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Menu"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
